@@ -9,7 +9,11 @@ import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.function.Function;
 
 import jakarta.annotation.Nullable;
@@ -355,7 +359,7 @@ public class RequestUtilService {
         return postWithResponseBody(path, body, true, responseType, expectedStatus, null, null);
     }
 
-    public <T, R> String postWithResponseBodyString(String path, T body, HttpStatus expectedStatus) throws Exception {
+    public <T> String postWithResponseBodyString(String path, T body, HttpStatus expectedStatus) throws Exception {
         return postWithResponseBodyString(path, body, expectedStatus, null, null, new LinkedMultiValueMap<>());
     }
 
@@ -747,7 +751,7 @@ public class RequestUtilService {
     }
 
     /**
-     * The Security Context gets cleared by {@link org.springframework.security.web.context.SecurityContextPersistenceFilter} after a REST call.
+     * The Security Context gets cleared after a REST call.
      * To prevent issues with further queries and rest calls in a test we restore the security context from the test security context holder
      */
     public void restoreSecurityContext() {
@@ -780,7 +784,7 @@ public class RequestUtilService {
     private static void verifyExpectedResponseHeaders(Map<String, String> expectedResponseHeaders, MvcResult res) {
         if (expectedResponseHeaders != null) {
             for (Map.Entry<String, String> responseHeader : expectedResponseHeaders.entrySet()) {
-                assertThat(res.getResponse().getHeaderValues(responseHeader.getKey()).get(0)).isEqualTo(responseHeader.getValue());
+                assertThat(res.getResponse().getHeaderValues(responseHeader.getKey()).getFirst()).isEqualTo(responseHeader.getValue());
             }
         }
     }
